# Kinframe

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  ECS_OPERATIONS.md  KinFrame.pem  README.md  docker-compose.infra.yml  justfile  prompt.md  showcase-parameter-table.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin_audit.py  admin_categories.py  admin_jobs.py  admin_photos.py  admin_users.py  auth.py  deps.py  health.py  map.py  photos.py  showcase.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  audit_log.py  category.py  photo.py  photo_processing_job.py  slide_design.py  user.py
backend/app/schemas/: auth.py  design_presets.json  health.py  layer_primitives.json  photo.py  showcase.py  slide_design.schema.json  slide_design_assets.py  slide_design_validator.py  slide_templates.json  user.py
backend/app/services/: admin_photos.py  audit_logs.py  categories.py  exif.py  fallback_slide_design.py  geocoding.py  health.py  images.py  photo_backfill.py  photo_jobs.py  photos.py  scoped_css.py  slide_designs.py  storage.py  users.py
backend/migrations/: env.py
backend/scripts/: backfill_photo_postprocessing.py  create_admin.py
backend/tests/: conftest.py  http_client.py  test_admin.py  test_ai.py  test_auth.py  test_config.py  test_css_sanitizer.py  test_geocoding.py  test_health.py  test_map.py  test_photos.py  test_prompt_builder.py  test_quality_scorer.py  test_schema_sharing.py  test_user_edit.py
docs/: code_plan.md  (+9 more)
(+144 files in other folders)
