[project]
name = "kinframe-backend"
version = "0.1.0"
description = "KinFrame FastAPI backend dependency environment for v0."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2.0",
    "argon2-cffi>=23.1,<26.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "minio>=7.2,<8.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "pillow>=11.0,<13.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "redis>=5.2,<7.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
